ref#82948 implement logger

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -5,6 +5,7 @@ services:
             - '%cors.friendly_captcha.secret%'
             - '%cors.friendly_captcha.sitekey%'
             - '%cors.friendly_captcha.endpoint.validation%'
+            - '@logger'
         tags:
             - { name: validator.constraint_validator, alias: cors_friendly_captcha_validator }
 
