--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -12,6 +12,6 @@ services:
     CORS\Bundle\FriendlyCaptchaBundle\Form\Type\FriendlyCaptchaType:
         arguments:
             - '%cors.friendly_captcha.sitekey%'
-            - '%cors.friendly_captcha.endpoint.puzzle%'
+            - '%cors.friendly_captcha.use_eu_endpoints%'
         tags:
             - { name: form.type }
